# discord-ito-bot

./: .dockerignore  .env.sample  Dockerfile  LICENSE  README.md  bot.py  docker-compose.yml  main.py  pyproject.toml
cogs/: admin.py  ito.py
cogs/resources/: ito_topic.json
src/: logger.py  model.py  settings.py
