[project]
name = "discord-ito-bot"
version = "0.1.0"
authors = ["Keiya Sato"]
description = "A Discord bot for playing ito"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "logging>=0.4.9.6",
    "py-cord[speed,voice]>=2.8.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]

[tool.ruff]
target-version = "py313"
line-length = 128

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
